service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service           # Name of the Service
spec:
  selector:
    app: my-app                  # Label selector to link Service to Pods
  ports:
    - protocol: TCP
      port: 80                   # Port exposed by the Service
      targetPort: 80             # Port on the container to route traffic to
  type: ClusterIP                # Type of Service (ClusterIP is for internal access)
